# aiserver

./: CMakeLists.txt
conf/: camera_nv12_rkmpp_h264.json  camera_nv12_rkmpp_h264_file_write.json  camera_nv12_rkrga_300_rknn_facedetect.json  camera_nv12_rkrga_300_rknn_posebody.json  file_nv12_rkmpp_h264_file_write.json  file_nv12_rkmpp_jpeg_file_write.json  mediaserver.json
src/: CMakeLists-with-sanitize.txt  CMakeLists.txt  ai_scene_director.cpp  ai_scene_director.h  ai_uvc_graph.cpp  ai_uvc_graph.h  aiserver.cpp  aiserver.h
src/conf/: camera_nv12_rkrga_300_rknn_face_landmark.json  camera_nv12_rkrga_300_rknn_facedetect.json  camera_nv12_rkrga_300_rknn_graph.json  camera_nv12_rkrga_300_rknn_mixed.json  camera_nv12_rkrga_300_rknn_posebody.json
src/dbus/: dbus_dispatcher.cpp  dbus_dispatcher.h  dbus_server.cpp  dbus_server.h  rockchip.aiserver.control.conf
src/dbus/control/: dbus_camera_control.cpp  dbus_camera_control.h  dbus_encoder_control.cpp  dbus_encoder_control.h  dbus_graph_control.cpp  dbus_graph_control.h  dbus_media_control.cpp  dbus_media_control.h  dbus_media_control.xml
src/dbus/database/: dbus_dbconfig.cpp  dbus_dbconfig.h  dbus_dbserver.cpp  dbus_dbserver.h
src/task/: ai_task_factory.cpp
src/task/sensetime/: st_task_handler.cpp
src/utils/logger/: log.h
src/utils/shmc/: nn_vision_rockx.h  rknn_user.h  shm_control.cpp  shm_control.h  shm_control_uvc.cpp  shm_control_uvc.h
